public/css/site.css
html {
  overflow: hidden;
}
* {
    font-family: 'Open Sans', sans-serif;
}
.profile-pictures {
  background-image:url('https://scontent-lax3-1.cdninstagram.com/hphotos-xpa1/t51.2885-15/e35/10549833_1727260620841051_270037565_n.jpg');
  height: 300px;
  background-size: cover;
  background-position:70% 20%;
  border-radius: 5px;
}
.nav {
  text-align: center;
}
.nav > * {
  color: rgba(85, 85, 85, 0.86);;
}
.nav > * > * {
  color: rgba(85, 85, 85, 0.86);;
}
.container {
  display: flex;
  justify-content: center;
  height: 100% !important;
}
.inner-container {
  width:100%;
  align-self: center;
}
@media only screen and (min-width: 992px) {
  html, body {
    background-color: blue;
  } 
  .nav-list {
    margin-bottom:0px !important;
  }
  .nav {
    margin: 0px; 
    padding: 0px; 
    bottom: 0px !important; 
    position: absolute; 
    width:100%;
  }
  .container-group {
    height:650px;
  }
  svg {
    top: 0;
    z-index: 100000;
  }
  .gridCircle {
    fill: rgba(205, 205, 205, 0) !important;
    stroke: rgba(205, 205, 205, 0.31) !important;
    fill-opacity: 0.1; 
    filter: url("#glow");
  }
}

